// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteHeaderRow when editing renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "space-between",
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
    }
  }
  testID="favorite-token-header"
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "rgba(19, 19, 19, 0.63)",
        "fontFamily": "Basel Grotesk",
        "fontSize": 17,
        "fontWeight": "400",
        "lineHeight": 20,
      }
    }
    suppressHighlighting={true}
  >
    Editing Title
  </Text>
  <View
    collapsable={false}
    focusVisibleStyle={{}}
    forwardedRef={[Function]}
    hitSlop={16}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "flexDirection": "column",
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "flexDirection": "column",
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {},
      ]
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        {
          "color": "#FF37C7",
          "fontFamily": "Basel Grotesk",
          "fontSize": 17,
          "fontWeight": "500",
          "lineHeight": 19.549999999999997,
        }
      }
      suppressHighlighting={true}
      testID="done"
    >
      Done
    </Text>
  </View>
</View>
`;

exports[`FavoriteHeaderRow when not editing renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "space-between",
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
    }
  }
  testID="favorite-token-header"
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "rgba(19, 19, 19, 0.63)",
        "fontFamily": "Basel Grotesk",
        "fontSize": 17,
        "fontWeight": "400",
        "lineHeight": 20,
      }
    }
    suppressHighlighting={true}
  >
    Title
  </Text>
  <View
    collapsable={false}
    focusVisibleStyle={{}}
    forwardedRef={[Function]}
    hitSlop={16}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "flexDirection": "column",
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "flexDirection": "column",
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {},
      ]
    }
    testID="edit"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      strokeLinecap="round"
      strokeWidth={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "rgba(19, 19, 19, 0.63)",
            "height": 20,
            "width": 20,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={4}
      vbWidth={18}
    >
      <RNSVGGroup
        color="rgba(19, 19, 19, 0.63)"
        fill={null}
        propList={
          [
            "fill",
            "strokeWidth",
            "strokeLinecap",
          ]
        }
        strokeLinecap={1}
        strokeWidth={1}
      >
        <RNSVGPath
          d="M9 3C9.55228 3 10 2.55228 10 2C10 1.44772 9.55228 1 9 1C8.44772 1 8 1.44772 8 2C8 2.55228 8.44772 3 9 3Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
        <RNSVGPath
          d="M16 3C16.5523 3 17 2.55228 17 2C17 1.44772 16.5523 1 16 1C15.4477 1 15 1.44772 15 2C15 2.55228 15.4477 3 16 3Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
        <RNSVGPath
          d="M2 3C2.55228 3 3 2.55228 3 2C3 1.44772 2.55228 1 2 1C1.44772 1 1 1.44772 1 2C1 2.55228 1.44772 3 2 3Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
